--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 #----------Instillinger: Boks på toppen av side----------------------------------------------------------------------
 bilde: https://raw.githubusercontent.com/uit-econ/hovedside/main/assets/img/Sok-1006.jpg?raw=true #Emnebilde
-name: Sok-1006 Mikroøkonomi - Økonomisk atferd, markeder og priser #Emnetittel
-semester: Vår 2022
-webadresse: https://uit-sok-1006-v22.github.io/
+name: Sok-xxxx Mikroøkonomi - Økonomisk atferd, markeder og priser #Emnetittel
+semester: xxx 20xx
+webadresse: https://uit-sok-xxxx-xxx.github.io/
 
 
 
@@ -13,7 +13,7 @@ topbox-farge: 00617f
 contentbox-farge: ffff;
 contentbox-skygge: 0px 0px 100px 0px rgba(50, 50, 50, 1)
 
-bakgrunn: https://github.com/uit-sok-1003-h21/emneside-alt/blob/main/assets/img/emneside-bakgrunn1.jpg?raw=true
+bakgrunn: /assets/img/emneside-bakgrunn.jpg
 bakgrunn-farge: 
 
 #Farge tekst
@@ -21,7 +21,7 @@ primaerfarge: 007396 #Farge overskrifter
 sekundaerfarge: #Farge generell tekst
 linkfarge: f2a900 #Farge linker
 
-uitlogo: https://github.com/uit-sok-1003-h21/emneside-alt/blob/main/assets/img/UiT_Logo_Bok_Hvit.png?raw=true
+uitlogo: /assets/img/uit.png
 title: null #Skal stå tom
 
 
