--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ primaerfarge: 007396 #Farge overskrifter
 sekundaerfarge: #Farge generell tekst
 linkfarge: f2a900 #Farge linker
 
-uitlogo: /assets/img/uit.png
+uitlogo: ./assets/img/uit.png
 title: null #Skal stå tom
 
 
