--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 #----------Instillinger: Boks på toppen av side----------------------------------------------------------------------
 bilde: ./assets/img/tema.jpg
-name: Sok-xxxx Mikroøkonomi - Økonomisk atferd, markeder og priser #Emnetittel
+name: Sok-xxxx Emnetittel #Emnetittel
 semester: xxx 20xx
 
 
