--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #----------Instillinger: Boks på toppen av side----------------------------------------------------------------------
 bilde: ./assets/img/tema.jpg
 name: Sok-xxxx Emnetittel #Emnetittel
-semester: xxx 20xx #f.eks Høsten 2023
+semester: Høst/Vår 20xx 
 
 
 
