--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 #----------Instillinger: Boks på toppen av side----------------------------------------------------------------------
-bilde: ./assets/img/tema.jpg
+image: ./assets/img/tema.jpg
 name: Sok-xxxx Emnetittel #Emnetittel
 semester: Høst/Vår 20xx 
 
