--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 #----------Instillinger: Boks på toppen av side----------------------------------------------------------------------
-name: Sok-xxxx Emnetittel #Emnetittel
+title: Sok-xxxx Emnetittel #Emnetittel
 semester: Høst/Vår 20xx 
 image: tema.jpg
 
